--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,9 +1,5 @@
 body {
-    font-family: 'Abril Fatface', cursive;
-    font-family: 'Merriweather', serif;
-    font-family: 'Space Mono', monospace;
-    font-family: 'Work Sans', sans-serif;
-    font-family: 'Yellowtail', cursive;
+  
     /* background-image: url("/resources/images/forest.jpg"); */
     background-image: url("/resources/images/forest.jpg"), linear-gradient(#f7f3f6, #4b1c1a);
 }
@@ -12,7 +8,9 @@ body {
   overflow: hidden;
   background: rgb(2,0,36);
   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,121,112,1) 44%, rgba(12,0,255,1) 100%);
+  font-family: 'Yellowtail', cursive;
 }
+
 
 .topnav a {
   float: left;
@@ -50,6 +48,7 @@ body {
     color: white;  
 	font-weight: 300;
     text-shadow: 2px 2px #ff0000;
+    font-family: 'Yellowtail', cursive;
 }
 
 .img {
@@ -59,6 +58,7 @@ body {
     -moz-box-shadow: 10px 10px 5px #ccc;
     -webkit-box-shadow: 10px 10px 5px #ccc;
     -khtml-box-shadow: 10px 10px 5px #ccc;
+}
 
 .blurb {
     color: white;
@@ -66,6 +66,23 @@ body {
 }
 
 .stuff {
-    background-color: lightblue;
-    font-family: Arial Times, New Roman;
+    background-color: rgb(218, 204, 21);
+    font-family: Arial;
+    color: white;
+    height: 200px;
+    width: auto;
+    margin: auto;
+    padding: 10px;
+    
+   
+}
+
+.box-shadow{
+    background: #ccc;
+  box-shadow: 4px 3px 8px 1px #969696;
+    -webkit-box-shadow: 4px 3px 8px 1px #969696;
+}
+
+.center {
+    align-content: center;
 }
