--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,7 @@
 body {
-  
     /* background-image: url("/resources/images/forest.jpg"); */
-    background-image: url("./resources/images/forest.jpg"), linear-gradient(#f7f3f6, #4b1c1a);
+    background-image: url("/resources/images/forest.jpg"), linear-gradient(#f7f3f6, #4b1c1a);
+    background-color: green;
 }
 
 .topnav {
@@ -70,7 +70,7 @@ body {
     font-family: Arial;
     color: white;
     height: 200px;
-    width: auto;
+    width: 500px;
     margin: auto;
     padding: 10px;
     
@@ -81,6 +81,7 @@ body {
     background: #ccc;
   box-shadow: 4px 3px 8px 1px #969696;
     -webkit-box-shadow: 4px 3px 8px 1px #969696;
+    padding: 5px;
 }
 
 .center {
@@ -88,6 +89,7 @@ body {
 }
 
 .about {
+  height: 300px;
   width: 25%;
 }
 
@@ -124,4 +126,22 @@ body {
 .container {
   padding:10px;
 
+}
+
+.forest-bg
+{
+  background-image: url("resources/images/forest.jpg");
+  background-color: lightseagreen;
+  padding: 5px;
+}
+
+.bio {
+  background-color: rgb(218, 204, 21);
+  font-family: Arial;
+  color: white;
+  height: 400px;
+  width: 500px;
+  margin: auto;
+  position: absolute;
+  right: 0;
 }
