--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,7 @@
 body {
     /* background-image: url("/resources/images/forest.jpg"); */
   
-    background-image: url("/../images/forest.jpg"), linear-gradient(#f7f3f6, #4b1c1a);
+    background-image: url("../images/forest.jpg"), linear-gradient(#f7f3f6, #4b1c1a);
     background-color: lightseagreen;
 }
 
@@ -132,7 +132,7 @@ body {
 
 .forest-bg
 {
-  background-image: url("/resources/images/forest.jpg");
+  background-image: url("resources/images/forest.jpg");
 
   padding: 5px;
 }
